--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <div class="container">
         <nav class="nav">
             <ul>
-                <li><a href="location.html">위치</a></li>
+                <li><a href="location.html">위치</a></li>`
                 <li><a href="rent.html">대여하기</a></li>
                 <li><a href="return.html">반납/연장하기</a></li>
                 <li><a href="maker.html">예쁜🐶👣📏들</a></li>
             </ul>
         </nav>
-    </div>`
+    </div>
 
     <section class="mainimg">
         <img src="main.png" alt="노트북">
