--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                     <input type="checkbox" value="remember-me">아이디 기억하기
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">log in</button>
+            <button class="btn btn-lg btn-danger btn-block" type="submit">log in</button>
         </form>
     </div>
 </body>
