--- a/maker.html
+++ b/maker.html
@@ -87,7 +87,7 @@
                         <img src="https://cdn.ggilbo.com/news/photo/202110/873065_702693_2620.jpg" class="w-50 h-50">
                         <li>MBTI : ESTP?</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger"
                         onclick="location.href = 'https://github.com/nohsoobin'">@nohsoobin</button>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <img src="" alt="">
                         <li>MBTI : ESTP?</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger"
                         onclick="location.href = 'https://github.com/qkrwldn38'">@qkrwldn38</button>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                         <img src="" alt="">
                         <li>MBTI : ESTP?</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger"
                         onclick="location.href = 'https://github.com/Parkpasss'">@Parkpasss</button>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         <img src="" alt="">
                         <li>MBTI : ESTP?</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger"
                         onclick="location.href = 'https://github.com/westkite23'">@westkite23</button>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                             class="w-50 h-50">
                         <li>MBTI : ESTP?</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary"
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger"
                         onclick="location.href = 'https://github.com/HanYooJa' ">@HanYooJa</button>
                 </div>
             </div>
