--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
                     <input type="password" placeholder="비밀번호를 입력해주세요" class="form-control" required>
                 </p>
 
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+                <button class="btn btn-lg btn-danger btn-block" type="submit">Sign Up</button>
             </div>
         </form>
 
