--- a/rent.html
+++ b/rent.html
@@ -77,7 +77,7 @@
                         <li>LG Gram</li>
                         <li>Apple Macbook</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Click</button>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger">Click</button>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
@@ -91,7 +91,7 @@
                         <li>Wireless</li>
                         <li>Logitech</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Click</button>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger">Click</button>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
@@ -105,7 +105,7 @@
                         <li>8GB</li>
                         <li>16GB</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Click</button>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger">Click</button>
                 </div>
             </div>
             <div class="card mb-4 shadow-sm">
@@ -119,7 +119,7 @@
                         <li>C TYPE</li>
                         <li>Camera</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Click</button>
+                    <button type="button" class="btn btn-lg btn-block btn-outline-danger">Click</button>
                 </div>
             </div>
         </div>
